--- a/css/main.css
+++ b/css/main.css
@@ -381,6 +381,7 @@ body {
 }
 
 .exp {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -388,12 +389,17 @@ body {
   margin: 5em 0;
   height: 75vh;
   width: 100%;
+  color: #cdd9e5;
+}
+.exp-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.418), rgba(0, 0, 0, 0.911)), url("../img/bg-exp-small.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  color: #cdd9e5;
-  filter: grayscale(0.6);
+  filter: sepia(0.8);
 }
 .exp-road {
   display: flex;
@@ -405,9 +411,11 @@ body {
   height: 35px;
   width: 2px;
   background-color: #909dab;
+  z-index: 5;
 }
 .exp-road__text {
   font-family: "chakra_300_light", sans-serif;
+  z-index: 5;
 }
 .exp-road__text h5 {
   padding-bottom: 0.3em;
